# Copyright 2024 Vagiz Duseev <vagiz@duseev.com>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[tool.poetry]
name = "llmsh"
version = "0.2"
description = """
Command-line tool to use Large Language Models in your shell,\
including OpenAI, Anthropic, PalM, Mistral, Cohere, and more.\
"""
license = "Apache-2.0"
readme = "README.md"
authors = ["Vagiz Duseev <vagiz@duseev.com>"]
maintainers = ["Vagiz Duseev <vagiz@duseev.com>"]
documentation = "https://github.com/vduseev/llmsh"
homepage = "https://github.com/vduseev/llmsh"
repository = "https://github.com/vduseev/llmsh"
keywords = ["cli", "llm", "openai", "ai", "shell", "console", "command-line"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Environment :: Console",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Topic :: Communications :: Chat",
]
packages = [
    { include = "llmsh" },
]

[tool.poetry.dependencies]
python = "^3.9"
litellm = "^1.34.18"
prompt-toolkit = "^3.0.43"
rich = "^13.7.1"
inquirer = "^3.2.4"
typer = "^0.12.1"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"

[tool.poetry.scripts]
llmsh = "llmsh.cli.app:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
